--- a/Weather_1/public/index.html
+++ b/Weather_1/public/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Comparison Table</title>
+  <title>Weather Widget</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="weather-widget"></div>
+  <script src="../src/index.ts"></script>
 </body>
 </html>
