--- a/Weather_1/public/index.html
+++ b/Weather_1/public/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Widget</title>
+  <title>Weather Comparison</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="weather-widget"></div>
-  <script src="../src/index.ts"></script>
+  <div id="app"></div>
+  <script src="../dist/bundle.js"></script>
 </body>
 </html>
